# alphaMind

./: .gitattributes  .gitignore  .secrets.baseline  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/alphamind/: ai-profile.deepseek-test.yaml  ai-profile.example.yaml  instruments.example.yaml  market-capabilities.snapshot.json  news-sources.example.yaml  runtime.example.yaml
configs/common/: audit-outbox.toml  exchange-capabilities.yaml  freqtrade-risk-adapter.toml  freqtrade-runtime-schema-2026.6.json  risk-limits.toml  runtime-db-contract.toml  runtime-versions.toml
configs/freqtrade/: anti-cheat.json  backtest.json  common.json  contract.json  dry-run.json  futures-instruments.generated.json  futures.dry-run.json  futures.json  futures.live.template.json  live.template.json  replay.json  spot-instruments.generated.json  spot.dry-run.json  spot.json  spot.live.template.json
configs/postgres/: live-runtime-roles.sql
configs/research/: anti-cheat-v1.toml  benchmark-v1.toml  execution-model-v1.toml  walk-forward-v1.toml
data/manifests/: regime-manifest.yaml  walk-forward-development-v1.yaml
data/schemas/: ai-profile.schema.yaml  approval-event.schema.yaml  approval-record.schema.yaml  artifact-manifest.schema.yaml  audit-event.schema.yaml  data-manifest.schema.yaml  decision-context.schema.yaml  experiment.schema.yaml  hypothesis.schema.yaml  instrument-registry.schema.yaml  market-capability-snapshot.schema.yaml  model-decision.schema.yaml  news-item.schema.yaml  news-source-registry.schema.yaml  ohlcv.schema.yaml  operational-control.schema.yaml  risk-snapshot.schema.yaml  runtime-config.schema.yaml  strategy-card.schema.yaml  telegram-notification.schema.yaml  trade-action.schema.yaml  trial-registry.schema.yaml
docs/: README.md  ai-assisted-quant-operations-lessons.md  alphaMind-量化交易系统开发计划审核意见.md  architecture.md  development-plan.md  freqtrade-mvp-runtime-contract.md  lightweight-ai-trading-mvp-development-plan.md  roadmap.md  strategy-research-and-validation.md  strategy.md
docs/decisions/: 0001-project-scope.md  0002-exchange-selection.md  0003-runtime-version-lock.md  0004-first-strategy.md  0005-data-and-holdout.md  0006-risk-accounting.md  0007-audit-and-replay.md  0008-ai-indicator-and-pattern-expansion.md  0009-architecture-improvements.md  0010-decision-context-core-features.md  0011-ai-decision-journal.md  0012-proposal-store-state-machine.md  0013-python-telegram-bot-approval-adapter.md  0014-telegram-callback-authentication.md  0015-execution-preflight-revalidation.md  0016-telegram-execution-risk-notifications.md  0017-operational-control-surface.md  ownership-matrix.md  phase-0-gate.md
docs/runbooks/: kill-switch.md  runtime-db-recovery.md
prompts/ai/: trade-decision-v1.md  trade-decision-v2.md
scripts/: __init__.py  build_anti_cheat_report.py  build_benchmark_report.py  build_clean_dataset.py  build_execution_model_report.py  build_r2_06_feature_comparison.py  build_walk_forward_report.py  check_repository.py  create_source_snapshot.py  manage_experiment.py  manage_runtime_db.py  refresh_market_capabilities.py  render_instrument_configs.py  run_audit_writer.py  verify_freqtrade_contract.py  verify_runtime_lock.py
user_data/: README.md
(+271 files in other folders)
