[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "alphamind"
version = "0.1.0"
description = "Deterministic research and risk core for alphaMind"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = []

[project.optional-dependencies]
dev = [
    "jsonschema[format]>=4.24,<5",
    "mypy>=2.3,<3",
    "pytest>=8.3,<9",
    "pyyaml>=6.0,<7",
    "ruff>=0.11,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
files = ["src", "scripts"]
strict = true
warn_unused_configs = true
show_error_codes = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
